fix horizontal scroll on ios

--- a/app/sass/pages/_main-page.scss
+++ b/app/sass/pages/_main-page.scss
@@ -206,6 +206,12 @@ p {
 }
 
 /* ============= PRODUCT SECTION  ============= */
+.slider {
+	overflow: hidden;
+	max-width: 100vw;
+	width: 100%;
+}
+
 .block-wrapper-no-padding {
 	padding: 20px 0;
 	max-width: 1440px;
